--- a/index.html
+++ b/index.html
@@ -44,11 +44,10 @@
       </nav>
 
       <div class="social-links">
-        <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
-        <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
-        <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="icofont-skype"></i></a>
-        <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
+        <a href="https://twitter.com/alphab3tj" class="twitter"><i class="icofont-twitter"></i></a>
+        <a href="https://instagram.com/alphab3tj" class="instagram"><i class="icofont-instagram"></i></a>
+        <a href="https://github.com/alphab3tj" class="github"><i class="ri-github-fill"></i></a>
+        <a href="https://gitlab.com/alphab3tj" class="gitlab"><i class="ri-gitlab-fill"></i></a>
       </div>
 
     </div>
@@ -508,7 +507,7 @@
           <div class="info-box">
             <i class="bx bx-map"></i>
             <h3>Alamat</h3>
-            <p>Jalan Puri Lidah Kulon Indah D-10, 60213, Lakarsantri, Lidah Kulon, Surabaya, Indonesia.</p>
+            <p>- [Privasi]</p>
           </div>
         </div>
 
@@ -517,11 +516,10 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
-              <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
-              <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="icofont-skype"></i></a>
-              <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
+              <a href="https://twitter.com/alphab3tj" class="twitter"><i class="icofont-twitter"></i></a>
+              <a href="https://instagram.com/alphab3tj" class="instagram"><i class="icofont-instagram"></i></a>
+              <a href="https://github.com/alphab3tj" class="github"><i class="ri-github-fill"></i></a>
+              <a href="https://gitlab.com/alphab3tj" class="gitlab"><i class="ri-gitlab-fill"></i></a>
             </div>
           </div>
         </div>
