--- a/index.html
+++ b/index.html
@@ -68,11 +68,7 @@
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Website Desainer.</h3>
-          <p class="font-italic">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore
-            magna aliqua.
-          </p>
+          <p class="font-italic">Masih Butuh Belajar Lagi Untuk Men-Desain Website.</p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
