--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <header id="header" class="header-tops">
     <div class="container">
 
-      <h1><a href="index.html">Alphab3t J</a></h1>
+      <h1><a href="">Alphab3t J</a></h1>
       <h2>Hai, Aku J. Aku Sedang Belajar Tentang <span>UI/UX Designer</span> .</h2>
 
       <nav class="nav-menu d-none d-lg-block">
@@ -493,8 +493,8 @@
     <div class="container">
 
       <div class="section-title">
-        <h2>Contact</h2>
-        <p>Contact Me</p>
+        <h2>Kontak</h2>
+        <p>Hubungi Saya Melalui</p>
       </div>
 
       <div class="row mt-2">
