--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <ul>
           <li class="active"><a href="#header">Home</a></li>
           <li><a href="#about">About</a></li>
+          <li><a href="#blog">Blog</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
@@ -92,7 +93,7 @@
             Hai, Perkenalkan, Saya Al Jarreau Arman Maulana. Kalian Dapat Memanggil Saya, J. Saya Mahasiswa Baru di
             Universitas Ciputra, Dengan Mengambil Program Studi <a href="http://informatika.uc.ac.id/"
               target="_blank">Information
-              &amp; Multimedia Technology.</a> Untuk Saat ini, Saya Sedang Mendalami/Mempelajari Tentang UI/UX Desainer
+              &amp; Multimedia Technology.</a> Untuk Saat ini, Saya Sedang Mendalami/Mempelajari Tentang UI/UX Desain
             &amp; iOS Apps.
           </p>
         </div>
@@ -170,11 +171,105 @@
     </div>
   </section>
 
+  <section id="blog" class="blog">
+    <div class="container">
+
+      <div class="section-title">
+        <h2>blog</h2>
+        <p>Semua Tentang per-Kuliahan.</p>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-6">
+          <h3 class="blog-title">Edge Computing</h3>
+          <div class="blog-item pb-0">
+            <h4>Apa Itu Edge Computing?
+            </h4>
+            <p><em>Edge Computing pada dasarnya mengacu pada proses data yang dikumpulkan, disimpan, dan dianalisis di
+                ‘edge’ jaringan tempat data asli dihasilkan. Meskipun edge computing tidak menjadi frase yang umum
+                digunakan saat ini, itu akan menjadi bagian sentral dari lanskap teknologi selama beberapa tahun ke
+                depan. Sebagai akibatnya, ada meningkatnya kebutuhan akan daya komputasi yang lebih besar dan
+                penyimpanan data yang lebih banyak; ini pada gilirannya mendorong kebutuhan perusahaan untuk
+                berinvestasi di pusat data atau situs komputasi ‘edge’.</em>
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="blog-item pb-0">
+            <h4>Mengapa Edge Computing itu Penting?</h4>
+            <p><em>Penyebaran edge computing ideal dalam berbagai situasi. Salah satunya adalah ketika perangkat IoT
+                memiliki konektivitas yang buruk dan tidak efisien untuk perangkat IoT untuk selalu terhubung ke pusat
+                cloud.
+                Sistem Edge ini berhasil mengurangi latensi karena data tidak harus melintasi jaringan ke pusat data
+                atau cloud untuk diproses. Ini sangat ideal untuk situasi di mana latensi milidetik tidak dapat
+                dipertahankan, seperti dalam layanan keuangan atau manufaktur.
+
+                Dengan hanya mengirim data penting melalui jaringan, sistem ini mengurangi data yang melintasi jaringan.
+
+                Contoh lainnya adalah pembangunan jaringan seluler 5G generasi berikutnya oleh perusahaan
+                telekomunikasi. Kelly Quinn, manajer riset di IDC yang mempelajari edge computing, memprediksi bahwa
+                ketika penyedia telekomunikasi membangun 5G ke dalam jaringan nirkabel mereka, mereka akan semakin
+                menambah pusat data mikro yang terintegrasi atau terletak berdekatan dengan menara 5G.
+              </em></p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="blog-item pb-0">
+            <h4>Apa Manfaat dari Edge Computing?
+            </h4>
+            <p>
+              <ol>
+                <li>Kecepatan</li>
+                <p>Edge Computing memungkinkan perangkat untuk merespons secara instan, kadang-kadang dalam mikrodetik,
+                  karena memotong kebutuhan untuk data bolak-balik antara server terpusat.
+                </p>
+                <li>Pengalaman Pengguna</li>
+                <p>Selain kecepatan, pengalaman keseluruhan untuk pengguna akhir akan ditingkatkan melalui latensi
+                  tinggi dan koneksi yang tidak dapat diandalkan, seperti yang ada di lokasi terpencil.
+                </p>
+                <li>Keamanan & Privasi</li>
+                <p>Keamanan dan privasi yang lebih ketat di sekitar data sensitif akan berarti bahwa, secara teoritis,
+                  Anda akan dapat menghindari pengiriman data sensitif di luar lokasi, dan sebaliknya memproses data ini
+                  secara lokal.
+                </p>
+                <p>
+                  <li>Keandalan</li>
+                  <p>Dengan pusat data edge yang terletak lebih dekat dengan pengguna akhir, ada jauh lebih sedikit
+                    kemungkinan masalah jaringan di lokasi di luar lokasi yang berdampak pada pelanggan lokal. Bahkan
+                    jika
+                    ada masalah kritis, seperti pemadaman pusat data, perangkat IoT yang terhubung ke jaringan edge
+                    terlokalisasi harus terus beroperasi secara independen.
+                  </p>
+                  <p>
+                    <li>Menghemat Biaya</li>
+                    <p>Edge Computing harus memberikan tingkat penghematan biaya untuk bisnis Anda. Mengingat bahwa hal
+                      itu
+                      akan memungkinkan pengurangan yang signifikan dalam beban aliran data pada server terpusat,
+                      sehingga
+                      menghemat sumber daya jaringan dan komputasi, yang mengarah ke penurunan kemacetan di jaringan,
+                      dan
+                      lebih sedikit permintaan energi untuk server.
+                    </p>
+              </ol>
+            </p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
   <section id="contact" class="contact">
     <div class="container">
       <div class="section-title">
         <h2>Kontak</h2>
-        <p>Hubungi Saya Melalui</p>
+        <p>Hubungi Saya Melalui.</p>
       </div>
 
       <div class="row mt-2">
