--- a/index.html
+++ b/index.html
@@ -199,6 +199,89 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="blog-item pb-0">
+            <h4>Kapan Edge Computing mulai dimanfaatkan?</h4>
+            <p><em>Pemanfaatan Edge Computing sebenarnya sudah lama, dengan banyaknya perusahaan yang memanfaatkan
+                internet. Namun, istilah
+                Edge Computing sendiri baru populer beberapa tahun terakhir ketika pengguna Cloud dan Internet of Things
+                semakin banyak.
+              </em></p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="blog-item pb-0">
+            <h4>Dimana Edge Computing berada?</h4>
+            <p><em>Tidak mudah untuk mengatakan dimana edge computing itu. Tergantung kepada siapa kita bertanya.
+                Contoh: di jaringan rumah
+                makan cepat saji, Edge Computing berada di tiap-tiap outlet mendekati konsumen. Sedangkan, di industri
+                berat misalnya
+                minyak dan gas, edge computing berada di lapangan mendekati bahan baku. Banyak alternatif jawaban untuk
+                menjawab dimana
+                edge computing berada.
+              </em></p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="blog-item pb-0">
+            <h4>Contoh-contoh penerapan Edge Computing</h4>
+            <p>
+              <ol>
+                <li>Kendaraan Otonom</li>
+                <p>Mobil dan kendaraan lain yang digerakkan sendiri atau bertenaga AI memerlukan volume data yang sangat
+                  besar dari
+                  lingkungannya agar berfungsi dengan benar dalam waktu nyata. Penundaan akan terjadi jika cloud
+                  computing digunakan.</p>
+                <li>Layanan Streaming</li>
+                <p>Layanan seperti Netflix, Hulu, Amazon Prime, dan Disney + yang akan datang semuanya membuat beban
+                  berat pada
+                  infrastruktur jaringan. Edge Computing membantu menciptakan pengalaman yang lebih lancar melalui cache
+                  tepi. Ini adalah
+                  saat konten populer di-cache di fasilitas yang terletak lebih dekat dengan pengguna akhir untuk akses
+                  yang lebih mudah
+                  dan lebih cepat.</p>
+                <li>Rumah Pintar</li>
+                <p>Mirip dengan layanan streaming, semakin populernya rumah pintar menimbulkan masalah. Sekarang terlalu
+                  banyak beban
+                  jaringan untuk mengandalkan cloud computing konvensional saja. Memproses informasi lebih dekat ke
+                  sumber berarti lebih
+                  sedikit latensi dan waktu respons yang lebih cepat dalam skenario darurat. Contohnya termasuk tim
+                  medis, pemadam
+                  kebakaran, atau penempatan polisi.</p>
+                <li>Kota pintar</li>
+                <p>Edge Computing memudahkan untuk mengatur kepentingan dan ruang publik secara real time. Dengan
+                  bertambahnya mobil pintar
+                  dan Internet of Thing, kota pintar dapat mengubah kehidupan seseorang dan lingkungan.</p>
+                <li>Manufaktur</li>
+                <p>Dengan Edge Computing, manufaktur dapat memproses data dengan lebih cepat, akurat, efisien, dan dapat
+                  lebih memenuhi
+                  keinginan konsumen.</p>
+                <li>Kesehatan</li>
+                <p>Dengan Edge Computing dan bantuan banyak gawai internet of thing sekarang, pasien yang menderita
+                  penyakit dapat secara
+                  real time berkonsultasi dengan dokter. Dokter pun dapat lebih mudah untuk mendiagnosa penyakit.</p>
+                <li>Perangkat Augmented Reality</li>
+                <p>Banyak perangkat augmented reality yang sudah tersedia di pasaran, tetapi dengan bantuan Edge
+                  Computing, proses
+                  pengiriman data visual dapat lebih cepat dilakukan daripada harus mengirimkan data ke pusat data
+                  terlebih dahulu.</p>
+                <li>Asisten virtual kecerdasan buatan</li>
+                <p>Dengan menggunakan Edge Computing ke dalam sistem, banyak data yang dapat lebih cepat diproses
+                  daripada harus
+                  mengirimkan data ke suatu pusat data.</p>
+              </ol>
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="blog-item pb-0">
             <h4>Mengapa Edge Computing itu Penting?</h4>
             <p><em>Penyebaran edge computing ideal dalam berbagai situasi. Salah satunya adalah ketika perangkat IoT
                 memiliki konektivitas yang buruk dan tidak efisien untuk perangkat IoT untuk selalu terhubung ke pusat
@@ -221,8 +304,7 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="blog-item pb-0">
-            <h4>Apa Manfaat dari Edge Computing?
-            </h4>
+            <h4>Apa Manfaat dari Edge Computing?</h4>
             <p>
               <ol>
                 <li>Kecepatan</li>
@@ -257,6 +339,55 @@
                       lebih sedikit permintaan energi untuk server.
                     </p>
               </ol>
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="blog-item pb-0">
+            <h4>Pendapat Saya Mengenai Edge Computing</h4>
+            <p><em>Lorem ipsum dolor sit amet.</em></p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="blog-item pb-0">
+            <h4>Daftar Pustaka</h4>
+            <p>
+              <ul>
+                <p>
+                  <li><a
+                      href="https://www.i-scoop.eu/edge-computing-explained/">https://www.i-scoop.eu/edge-computing-explained/</a>
+                  </li>
+                </p>
+                <p>
+                  <li><a
+                      href="https://dzone.com/articles/why-is-edge-computing-gaining-popularity-today">https://dzone.com/articles/why-is-edge-computing-gaining-popularity-today</a>
+                  </li>
+                </p>
+                <p>
+                  <li><a
+                      href="https://aithority.com/ait-featured-posts/5-innovative-applications-of-edge-computing/">https://aithority.com/ait-featured-posts/5-innovative-applications-of-edge-computing/</a>
+                  </li>
+                </p>
+                <p>
+                  <li><a
+                      href="https://www.sales1crm.com/blog/apa-itu-edge-computing-definisi-infografis">https://www.sales1crm.com/blog/apa-itu-edge-computing-definisi-infografis</a>
+                  </li>
+                </p>
+                <p>
+                  <li><a
+                      href="https://www.inixindo.co.id/index.php/it-forum/77-diskusi-umum/1730-mengenal-edge-computing">https://www.inixindo.co.id/index.php/it-forum/77-diskusi-umum/1730-mengenal-edge-computing</a>
+                  </li>
+                </p>
+                <p>
+                  <li><a href="https://nagitec.com/edge-computing/">https://nagitec.com/edge-computing/</a></li>
+                </p>
+              </ul>
             </p>
           </div>
         </div>
