--- a/index.html
+++ b/index.html
@@ -348,7 +348,8 @@
         <div class="col-lg-6">
           <div class="blog-item pb-0">
             <h4>Pendapat Saya Mengenai Edge Computing</h4>
-            <p><em>Lorem ipsum dolor sit amet.</em></p>
+            <p><em>Edge Computing Ini Sangat Berguna Untuk Perusahaan Yang Ingin Meningkatkan Lebih Mengenai
+                Komputasi Yang Sangat Besar/Tinggi Dimasa Yang Akan Datang.</em></p>
           </div>
         </div>
       </div>
@@ -360,32 +361,34 @@
             <p>
               <ul>
                 <p>
-                  <li><a
-                      href="https://www.i-scoop.eu/edge-computing-explained/">https://www.i-scoop.eu/edge-computing-explained/</a>
+                  <li><a href="https://www.i-scoop.eu/edge-computing-explained/"
+                      target="_blank">https://www.i-scoop.eu/edge-computing-explained/</a>
+                  </li>
+                </p>
+                <p>
+                  <li><a href="https://dzone.com/articles/why-is-edge-computing-gaining-popularity-today"
+                      target="_blank">https://dzone.com/articles/why-is-edge-computing-gaining-popularity-today</a>
+                  </li>
+                </p>
+                <p>
+                  <li><a href="https://aithority.com/ait-featured-posts/5-innovative-applications-of-edge-computing/"
+                      target="_blank">https://aithority.com/ait-featured-posts/5-innovative-applications-of-edge-computing/</a>
+                  </li>
+                </p>
+                <p>
+                  <li><a href="https://www.sales1crm.com/blog/apa-itu-edge-computing-definisi-infografis"
+                      target="_blank">https://www.sales1crm.com/blog/apa-itu-edge-computing-definisi-infografis</a>
                   </li>
                 </p>
                 <p>
                   <li><a
-                      href="https://dzone.com/articles/why-is-edge-computing-gaining-popularity-today">https://dzone.com/articles/why-is-edge-computing-gaining-popularity-today</a>
+                      href="https://www.inixindo.co.id/index.php/it-forum/77-diskusi-umum/1730-mengenal-edge-computing"
+                      target="_blank">https://www.inixindo.co.id/index.php/it-forum/77-diskusi-umum/1730-mengenal-edge-computing</a>
                   </li>
                 </p>
                 <p>
-                  <li><a
-                      href="https://aithority.com/ait-featured-posts/5-innovative-applications-of-edge-computing/">https://aithority.com/ait-featured-posts/5-innovative-applications-of-edge-computing/</a>
-                  </li>
-                </p>
-                <p>
-                  <li><a
-                      href="https://www.sales1crm.com/blog/apa-itu-edge-computing-definisi-infografis">https://www.sales1crm.com/blog/apa-itu-edge-computing-definisi-infografis</a>
-                  </li>
-                </p>
-                <p>
-                  <li><a
-                      href="https://www.inixindo.co.id/index.php/it-forum/77-diskusi-umum/1730-mengenal-edge-computing">https://www.inixindo.co.id/index.php/it-forum/77-diskusi-umum/1730-mengenal-edge-computing</a>
-                  </li>
-                </p>
-                <p>
-                  <li><a href="https://nagitec.com/edge-computing/">https://nagitec.com/edge-computing/</a></li>
+                  <li><a href="https://nagitec.com/edge-computing/"
+                      target="_blank">https://nagitec.com/edge-computing/</a></li>
                 </p>
               </ul>
             </p>
