--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.plyr.io/3.6.2/plyr.css" />
 
   <link href="assets/css/style.css" rel="stylesheet">
 </head>
@@ -97,6 +98,23 @@
               &amp; Multimedia Technology.</a> Untuk Saat ini, Saya Sedang Mendalami/Mempelajari Tentang UI/UX Desain
             &amp; iOS Apps.
           </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="about-me container">
+      <div class="section-title">
+        <h2>Youtube</h2>
+        <p>Selamat Menonton, Terimakasih!</p>
+
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="plyr__video-embed" id="player">
+              <iframe width="auto" height="auto"
+                src="https://www.youtube.com/embed/EqQhNQcEqlE?origin=https://plyr.io&amp;iv_load_policy=3&amp;modestbranding=1&amp;playsinline=1&amp;showinfo=0&amp;rel=0&amp;enablejsapi=1"
+                allowfullscreen allowtransparency allow="autoplay"></iframe>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -1062,6 +1080,7 @@
   <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/venobox/venobox.min.js"></script>
+  <script src="https://cdn.plyr.io/3.6.2/plyr.polyfilled.js"></script>
 
   <script src="assets/js/main.js"></script>
 
