commit ke sepuluh

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       </div>
 
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-auto">
           <h3 class="blog-title">Edge Computing</h3>
           <div class="blog-item pb-0">
             <h4>Apa Itu Edge Computing?
@@ -216,7 +216,7 @@
       </div>
 
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-auto">
           <div class="blog-item pb-0">
             <h4>Kapan Edge Computing mulai dimanfaatkan?</h4>
             <p><em>Pemanfaatan Edge Computing sebenarnya sudah lama, dengan banyaknya perusahaan yang memanfaatkan
@@ -229,7 +229,7 @@
       </div>
 
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-auto">
           <div class="blog-item pb-0">
             <h4>Dimana Edge Computing berada?</h4>
             <p><em>Tidak mudah untuk mengatakan dimana edge computing itu. Tergantung kepada siapa kita bertanya.
@@ -245,7 +245,7 @@
       </div>
 
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-auto">
           <div class="blog-item pb-0">
             <h4>Contoh-contoh penerapan Edge Computing</h4>
             <p>
@@ -299,7 +299,7 @@
       </div>
 
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-auto">
           <div class="blog-item pb-0">
             <h4>Mengapa Edge Computing itu Penting?</h4>
             <p><em>Penyebaran edge computing ideal dalam berbagai situasi. Salah satunya adalah ketika perangkat IoT
@@ -321,7 +321,7 @@
       </div>
 
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-auto">
           <div class="blog-item pb-0">
             <h4>Apa Manfaat dari Edge Computing?</h4>
             <p>
@@ -364,7 +364,7 @@
       </div>
 
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-auto">
           <div class="blog-item pb-0">
             <h4>Pendapat Saya Mengenai Edge Computing</h4>
             <p><em>Edge Computing Ini Sangat Berguna Untuk Perusahaan Yang Ingin Meningkatkan Lebih Mengenai
@@ -374,7 +374,7 @@
       </div>
 
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-auto">
           <div class="blog-item pb-0">
             <h4>Daftar Pustaka</h4>
             <p>
@@ -411,6 +411,53 @@
                 </p>
               </ul>
             </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-auto">
+          <h3 class="blog-title">Refleksi Minggu Ke - 4.</h3>
+          <div class="blog-item pb-0">
+            <h4>Hukum & Etika.</h4>
+            <p>
+              <ul>
+                <p>
+                  <li>Oke, Pertama tama Saya Ingin Menjelaskan Kepada Kalian Tentang Pengertian Hukum Menurut Para Alhi. Mulai Dari Achmad Ali, Menurut Dia Hukum Adalah Norma Yang Mengatur Mana Yang Benar dan Mana Yang Salah Suatu Tindakan atau Perilaku. Pihak Yang Berwenang Untuk Membuat atau Menciptakan Norma dan Aturan Tersebut yaitu Pemerintah Dalam Bentuk Hukum Secara Tertulis dan Tidak tertulis Dengan Sanksi Berupa Ancaman Hukuman Bagi Para Pelanggarnya.
+                  Lalu Dari Sudut Pandang Prof. Dr. Van Kan yaitu Merupakan Peraturan Hidup Secara Menyeluruh yang Bersifat Memaksa Dengan Tujuan untuk Melindungi Kepentingan Umum (Masyarakat).
+                  </li>
+                </p>
+                <p>
+                  <li>Lalu Yang Kedua Ada Etika. Menurut Ahmad Amin Etika Merupakan Suatu Ilmu Yang Menjelaskan Tentang Arti Baik Dan Buruk Serta Apa Yang Seharusnya Dilakukan Oleh Manusia, Juga Menyatakan Sebuah Tujuan Yang Harus Dicapai Manusia Dalam Perbuatannya Dan Menunjukkan Arah Untuk Melakukan Apa Yang Seharusnya Didilakukan Oleh Manusia.</li>
+                </p>
+              </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-auto">
+          <div class="blog-item pb-0">
+            <h4>Refleksi</h4>
+            <p><em>Untuk Kasus Ini, Terdapat Seorang Wanita Hampir Meninggal Karena Salah Satu Jenis Kanker Yang Belum Diketahui. Akan Tetapi Ada Obat Yang Menurut Dokter Bisa Menyelamatkannya. Obat Tersebut Adalah Sejenis Radium Yang Baru Ditemukan Oleh Apoteker Di Kota Yang Sama. Obat Ini Mahal Untuk Pembuatannya, Tetapi Harga Yang Dijual Oleh Apoteker Dapat Mencapai Sepuluh Kali Lipat Dari Biaya Pembuatannya. Dia Membeli Radium Seharga Kurang Lebih 200 Dolar Dan Menjual Obat Dalam Dosis Kecil Seharga 2.000 Dolar. Heinz Pergi Untuk Meminjam Uang Dari Seseorang Yang Dia Kenal, Namun Dia Hanya Mendapatkan 1.000 Dolar, Itupun Masih Setengah Harga Obatnya. Lalu Dia Memberi Tahu Apoteker Bahwa Istrinya Sedang Sekarat, Dan Memintanya Untuk Menjual Obat Dengan Harga Murah, Atau Berjanji Kepada Apoteker Akan Melunasinya Ketika Sang Istri Sembuh. Namun Apoteker Ini Tetap Mengelak Omongan Si Heinz Dan Pada Akhirnya, Heinz Putus Asa. Dan Dia Memiliki Pikiran Jika Dia Ingin Membongkar Apotek Tersebut Untuk Mencuri Obat Demi Menyembuhkan Sang Istri.</em></p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-auto">
+          <div class="blog-item pb-0">
+            <h4>Jika Saya Berada Di Posisi Heinz Saat Itu, Apa Yang Harus Saya Lakukan?</h4>
+            <p><em>Membawa Istri Saya Ke Rumah Sakit/Tempat Yang Mendapatkan Pengobatan Selayaknya Agar Tidak Semakin Parah. Dan Setelah Saya Membawanya, Lalu Saya Akan Pergi Untuk Menanyakan Ulang Dan Memastikan Ke Selurun Dokter Yang Ada Di Kota Heinz Dan Istrinya Tinggal Jika Obat Itu (Radium) Benar Benar Ada. Tidak Langsung Percaya Begitu Saja Dengan Apoteker Yang Bisa Saya Katakan, Informasi Yang Apoteker Berikan Belum Valid. Apa Jadinya Ketika Saya Percaya Begitu Saja Dengan Apoteker? Yang Pertama Tadi, Obat Tersebut Belum Saya Ketahui Pasti Keberadaannya. Lalu Yang Kedua, Ketika Apoketer Tersebut Berhasil Saya Rayu Untuk Melunasi Pembayaran Diakhir, Saya Juga Sia Sia Meminjam Uang Kepada Teman Saya Dan Saya Berikan, Jika Obat Itu Tidak Manjur.</em></p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-auto">
+          <div class="blog-item pb-0">
+            <h4>Lalu, Apa Jadinya Ketika Heinz Benar Benar Ingin Mencuri Obat Tersebut?</h4>
+            <p><em>Bahagia. Tentu Saja, Dia Dapat Menyembuhkan Istrinya Yang Dalam Keadaan Kritis. Namum, Dilain Sudut Pandang, Heinz Juga Akan Menjadi Buronan Oleh Pihak Berwajib. Ketika Suatu Saat Keberadaan Heinz Terungkap, Yang Berdampak Bukan Hanya Heiz. Tetapi, Istri & Keluarganya Pun Juga Ikut Malu Karena Perbuatannya Yang Tidak Senonoh.</em></p>
           </div>
         </div>
       </div>
