--- a/index.html
+++ b/index.html
@@ -462,6 +462,99 @@
         </div>
       </div>
 
+      <div class="row">
+        <div class="col-lg-auto">
+          <h3 class="blog-title">Computer Networks</h3>
+          <div class="blog-item pb-0">
+            <h4>Apa Sih Itu?</h4>
+            <p>Computer Networks Atau Bisa Di Sebut Jaringan komputer adalah jaringan telekomunikasi yang memungkinkan antar komputer untuk saling berkomunikasi dengan bertukar data. Pihak yang meminta/menerima layanan disebut klien dan yang memberikan/mengirim layanan disebut peladen . Dua buah komputer yang masing-masing memiliki sebuah kartu jaringan, kemudian dihubungkan melalui kabel maupun nirkabel sebagai medium transmisi data, dan terdapat perangkat lunak sistem operasi jaringan akan membentuk sebuah jaringan komputer yang sederhana.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-auto">
+          <div class="blog-item pb-0">
+            <h4>Macam Networking Device</h4>
+            <p>
+              <ol>
+                <li>Hub (Hub Ethernet)</li>
+                <p>
+                  perangkat keras jaringan untuk menghubungkan beberapa perangkat Eternet bersama-sama dan menjadikannya bertindak sebagai segmen jaringan tunggal. Hub bekerja pada lapisan fisik model OSI. Selain port standar 8P8C , beberapa hub mungkin juga dilengkapi dengan BNC atau konektor Attachment Unit Interface untuk memungkinkan koneksi ke segmen jaringan legacy 10BASE2 atau 10BASE5 lama.
+                </p>
+                <li>Gateaway (Gerbang Jaringan)</li>
+                <p>
+                  sebuah perangkat yang digunakan untuk menghubungkan satu jaringan komputer dengan satu atau lebih jaringan komputer yang menggunakan kaidah komunikasi yang berbeda sehingga informasi dari satu jaringan komputer dapat dialirhantarkan ke jaringan komputer yang lain dengan kaidah jaringan berbeda. 
+                </p>
+                <li>Router</li>
+                <p>
+                  sebuah alat yang mengirimkan paket data melalui sebuah jaringan atau Internet menuju tujuannya, melalui sebuah proses yang dikenal sebagai penghalaan.
+                </p>
+                <li>Repeater</li>
+                <p>
+                  adalah sebuah perangkat elektronik yang menerima isyarat dan mentransmisikan kembali isyarat tersebut dengan daya yang lebih tinggi, sehingga isyarat tersebut dapat menjangkau area yang lebih luas.
+                </p>
+                <li>Bridge (Jembatan Jaringan)</li>
+                <p>
+                  sebuah komponen jaringan yang digunakan untuk memperluas jaringan atau membuat sebuah segmen jaringan. Jembatan juga dapat digunakan untuk menggabungkan dua buah media jaringan yang berbeda, seperti halnya media kabel Unshielded Twisted-Pair dengan kabel serat optik atau dua buah arsitektur jaringan yang berbeda, seperti halnya antara Token Ring dan Eternet. Jembatan jaringan juga kadang-kadang mendukung protokol Simple Network Management Protocol , dan beberapa di antaranya memiliki fitur diagnosis lainnya.
+                </p>
+                <li>Switch</li>
+                <p>
+                  jaringan dapat digunakan sebagai penghubung komputer atau perute pada satu area yang terbatas, pengalih juga bekerja pada lapisan taut data , cara kerja pengalih hampir sama seperti jembatan , tetapi switch memiliki sejumlah porta sehingga sering dinamakan jembatan pancaporta . 
+                </p>
+              </ol>
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-auto">
+          <div class="blog-item pb-0">
+            <h4>Daftar Pustaka</h4>
+            <p>
+              <ul>
+                <p>
+                  <li><a href="https://id.wikipedia.org/wiki/Jaringan_komputer"
+                      target="_blank">Computer Networks</a>
+                  </li>
+                </p>
+                <p>
+                  <li><a href="https://id.wikipedia.org/wiki/Hub"
+                      target="_blank">Hub</a>
+                  </li>
+                </p>
+                <p>
+                  <li><a href="https://id.wikipedia.org/wiki/Gerbang_jaringan"
+                      target="_blank">Gateaway</a>
+                  </li>
+                </p>
+                <p>
+                  <li><a href="https://id.wikipedia.org/wiki/Perute"
+                      target="_blank">Router</a>
+                  </li>
+                </p>
+                <p>
+                  <li><a href="https://id.wikipedia.org/wiki/Pengulang"
+                      target="_blank">Repeater</a>
+                  </li>
+                </p>
+                <p>
+                  <li><a
+                      href="https://id.wikipedia.org/wiki/Jembatan_jaringan"
+                      target="_blank">Bridge</a>
+                  </li>
+                </p>
+                <p>
+                  <li><a href="https://id.wikipedia.org/wiki/Pengalih_jaringan"
+                      target="_blank">Switch</a></li>
+                </p>
+              </ul>
+            </p>
+          </div>
+        </div>
+      </div>
+
     </div>
   </section>
 
