--- a/index.html
+++ b/index.html
@@ -555,6 +555,82 @@
         </div>
       </div>
 
+      <div class="row">
+        <div class="col-lg-auto">
+          <h3 class="blog-title">Growth Hack Start-Up</h3>
+          <div class="blog-item pb-0">
+            <h4>Apa Sih Itu?</h4>
+            <p>StartUp Merupakan Sesuatu Yang Sering Kali Di Gunakan Oleh Perusahaan Besar Dalam Bidang Teknologi Menggunakan Berfikir Analitis, Kreativitas, & Metrik Sosial. Untuk Melakukan Pembuatan StartUp Ini, Seharusnya Kita Tidak Perlu Mengeluarkan Banyak Biaya Bahkan Juga Tidak Menggunakan Biaya Sepeserpun. Tetapi Kita Juga Harus Mencari Investor, Memang Bisa Dikatan Sedikit Rumit Untuk Mencarinya.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-auto">
+          <div class="blog-item pb-0">
+            <h4>Hal Terpenting Untuk Membangun StartUp</h4>
+            <p>
+              <ol>
+                <li>Funding</li>
+                <p>Menyediakan Resource Untuk Kebutuhan Project Yang Akan Digunakan.</p>
+                <li>Innovation</li>
+                <p>Memberikan Nilai Yang Signifikan Dan Menciptakan/Memperbaiki Ide Ide Yang Baru.</p>
+                <li>Scalable</li>
+                <p>Melakukan Problem Solved Dalam Menangani Di Suatu Jaringan/Sistem</p>
+                <li>Technology</li>
+                <p>Mempermudah Masyarakat Untuk Menyediakan Barang Barang Yang Berguna.</p>
+              </ol>
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-auto">
+          <div class="blog-item pb-0">
+            <h4>Beberapa StartUp Yang Ada Di Indonesia</h4>
+            <p>
+              <ul>
+                <p>
+                  <li><a href="https://www.online-pajak.com"
+                      target="_blank">OnlinePajak</a>
+                  </li>
+                </p>
+                <p>
+                  <li><a href="https://www.akulaku.com"
+                      target="_blank">Akulaku</a>
+                  </li>
+                </p>
+                <p>
+                  <li><a href="https://www.tokopedia.com"
+                      target="_blank">Tokopedia</a>
+                  </li>
+                </p>
+                <p>
+                  <li><a href="https://www.bukalapak.com"
+                      target="_blank">Bukalapak</a>
+                  </li>
+                </p>
+                <p>
+                  <li><a href="https://www.gojek.com"
+                      target="_blank">Gojek</a>
+                  </li>
+                </p>
+              </ul>
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-auto">
+          <div class="blog-item pb-0">
+            <h4>Kesimpulan</h4>
+            <p>Dari StartUp Yang Dibawakan Oleh Kiki Guzali Pada Pertemuan Minggu Ke-10 Di Mata Kuliah Introduction to IT, Disini Saya Dapat Belajar Bawha Kita Membuat Project StartUp Ini Tidak Hanya Selling & Marketing Yang Harus Di Tonjolkan Kemampuannya. Karena Untuk Membuat Project StartUp Ini Juga Membutuhkan Effort/Perjuangan Yang Besar. Rata Rata Para Developer Yang Membangun StartUp Ini Mendapatkan Peluang Kegagalan Yang Sangat Tinggi. Dan Tetap Harus Optimis Bahwa Project Yang Kita Kembangkan Akan Menjadi Hal Yang Berguna Bagi Masyarakat.</p>
+          </div>
+        </div>
+      </div>
+
     </div>
   </section>
 
