--- a/index.html
+++ b/index.html
@@ -631,6 +631,16 @@
         </div>
       </div>
 
+      <div class="row">
+        <div class="col-lg-auto">
+          <h3 class="blog-title">Scratch</h3>
+          <div class="blog-item pb-0">
+            <h4>masi belom jadi, yauda de, huhu.</h4>
+            <iframe src="https://scratch.mit.edu/projects/465844688/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+
     </div>
   </section>
 
